--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "highcharts-ng": "~0.0.8"
   },
   "devDependencies": {
     "mockfirebase": "0.11.0",
