--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "highcharts-ng": "~0.0.8",
-    "angular-bootstrap": "~0.13.2"
+    "angular-bootstrap": "~0.13.2",
+    "highcharts-release": "~4.1.7"
   },
   "devDependencies": {
     "mockfirebase": "0.11.0",
