--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-touch": "^1.3.0",
     "highcharts-ng": "~0.0.8",
     "angular-bootstrap": "~0.13.2",
-    "highcharts-release": "~4.1.7"
+    "highcharts-release": "~4.1.7",
+    "angular-spectrum-colorpicker": "~1.4.1"
   },
   "devDependencies": {
     "mockfirebase": "0.11.0",
